examples/compiler_errors/adversarial/multi_independent_errors.flx
// expect: compile_error
// expect-error: E300
// expect-error: E056

fn add(a: Int, b: Int) -> Int {
    a + b
}

fn bad() -> Unit {
    let first: Int = "oops"
    let second = add(1)
    print("still effectful")
}

fn main() -> Unit {
    bad()
}
